# alzheimer-mri-processing-pipeline

./: .gitignore  .pre-commit-config.yaml  00_ SPECS_PROJECTION_FROM_GPT.md  00_CITATION_GUIDE.md  00_SANITY_CHECK_FROM_GPT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  debug_hd_bet.py  pyproject.toml  requirements.txt  test_hdbet_manual.bat  test_hdbet_manual.py  test_import.py  test_import_minimal.py  test_lazy_import.py  test_progress_display.py  test_skull_stripping_fix.py
configs/: default.yaml
configs/stages/: data_preparation.yaml  environment_setup.yaml  image_processing.yaml  nifti_processing.yaml
docs/: CHANGELOG.md
scripts/: README.md
scripts/unix_based_system/: run_data_preparation.sh  run_environment_setup.sh  run_full_pipeline.sh  run_image_processing.sh  run_nifti_processing.sh
scripts/windows_based_system/: run_data_preparation.bat  run_environment_setup.bat  run_full_pipeline.bat  run_image_processing.bat  run_nifti_processing.bat
src/data_processing/: cli.py  logging_setup.py  paths.py
src/data_processing/config/: loader.py  schema.py  validators.py
src/data_processing/data_preparation/: deduplication.py  file_operations.py  formatter.py  manifests.py  metadata.py  runner.py  search.py  splitting.py  visualize.py
src/data_processing/environment_setup/: formatter.py  gpu.py  packages.py  runner.py
src/data_processing/image_processing/: __init__.py  formatter.py  runner.py
src/data_processing/image_processing/center_crop/: __init__.py  processor.py  runner.py  visualize.py
src/data_processing/image_processing/data_balancing/: __init__.py  processor.py  runner.py  visualize.py
src/data_processing/nifti_processing/: __init__.py  formatter.py  gpu_utils.py  runner.py
src/data_processing/stages/: __init__.py  base.py  data_preparation_stage.py  environment_setup_stage.py  image_processing_stage.py  nifti_processing_stage.py
src/data_processing/utils/: errors.py  io.py  randomness.py  timers.py
support_files/templates/hippocampal-roi/: README.md
support_files/templates/mni-brain/: README.md
(+20 files in other folders)
