# package metadata, deps, entry points
# console_scripts: adp -> data_processing.cli:main

[project]
name = "alzheimer-disease-processing-py-format"
version = "1.3.0"
description = "Complete 3D NIfTI preprocessing pipeline for ADNI T1-weighted MRI data"
authors = [
    {name = "Zaky Ashari", email = "izzat.zaky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch==2.9.0+cu126",
    "torchvision==0.24.0+cu126",
    "torchaudio==2.9.0+cu126",
    "Pillow==11.3.0",
    "ipython==9.6.0",
    "ipywidgets==8.1.8",
    "matplotlib==3.10.7",
    "nibabel==5.3.2",
    "pandas==2.3.3",
    "psutil==7.1.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "scikit-image==0.25.0",
    "opencv-python==4.10.0.84",
    "timm==1.0.21",
    "tqdm==4.67.1",
    "pyyaml==6.0.3",
    "rich>=13.0.0",
    "seaborn>=0.13.0",
]

[project.scripts]
adp = "data_processing.cli:main"

[tool.poetry]
name = "alzheimer-disease-processing-py-format"
version = "1.3.0"
description = "Complete 3D NIfTI preprocessing pipeline for ADNI T1-weighted MRI data"
authors = ["Zaky Ashari <izzat.zaky@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_processing", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = {version = "2.9.0+cu126", source = "pytorch-cu126"}
torchvision = {version = "0.24.0+cu126", source = "pytorch-cu126"}
torchaudio = {version = "2.9.0+cu126", source = "pytorch-cu126"}
Pillow = "11.3.0"
ipython = "9.6.0"
ipywidgets = "8.1.8"
matplotlib = "3.10.7"
nibabel = "5.3.2"
pandas = "2.3.3"
psutil = "7.1.3"
scikit-learn = "1.7.2"
scipy = "1.16.3"
scikit-image = "0.25.0"
opencv-python = "4.10.0.84"
timm = "1.0.21"
tqdm = "4.67.1"
pyyaml = "6.0.3"
rich = "^13.0.0"
seaborn = "^0.13.0"

[tool.poetry.scripts]
adp = "data_processing.cli:main"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
